10/6/2009 - GitHub First Commit
1/4/2010 - Changes applied for new 4chan systems