@@ -1,0 +1,34 @@
+﻿/* File Created: 3/23/2010
+ * Last Modified: 3/23/2010
+ * 
+ * This file is part of ThreadSave.
+ * 
+ * ThreadSave is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ * 
+ * ThreadSave is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ * 
+ * You should have received a copy of the GNU General Public License
+ * along with ThreadSave.  If not, see <http://www.gnu.org/licenses/>.
+*/
+
+using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+
+namespace ThreadSave
+{
+    class Board
+    {
+        public string Host;
+        public string BoardName;
+        public string ImageRegex;
+        public string StorageDir;
+    }
+}
