@@ -6,11 +6,11 @@ using System.Runtime.InteropServices;
 // set of attributes. Change these attribute values to modify the information
 // associated with an assembly.
 [assembly: AssemblyTitle("ThreadSave")]
-[assembly: AssemblyDescription("")]
+[assembly: AssemblyDescription("*chan Thread Download Utility")]
 [assembly: AssemblyConfiguration("")]
 [assembly: AssemblyCompany("Anonymous")]
 [assembly: AssemblyProduct("ThreadSave")]
-[assembly: AssemblyCopyright("Copyright © Anonymous 2009-2010")]
+[assembly: AssemblyCopyright("")]
 [assembly: AssemblyTrademark("")]
 [assembly: AssemblyCulture("")]
 
@@ -32,5 +32,5 @@ using System.Runtime.InteropServices;
 // You can specify all the values or you can default the Build and Revision Numbers 
 // by using the '*' as shown below:
 // [assembly: AssemblyVersion("1.0.*")]
-[assembly: AssemblyVersion("1.0.0.0")]
-[assembly: AssemblyFileVersion("1.0.0.0")]
+[assembly: AssemblyVersion("0.2.0.32")]
+[assembly: AssemblyFileVersion("0.2.0.32")]
