@@ -1,2 +1,3 @@
 10/6/2009 - GitHub First Commit
 1/4/2010 - Changes applied for new 4chan systems
+3/23/2010 - Added configuration files, and support for all 4chan boards
